[package]
name = "simple-pow-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.28", features = ["rand-std"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
